# CPPUnitTest

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CPPUnitTestConfig.cmake.in  LICENSE  README.md  build.sh  format.sh  tidy.sh
examples/: CMakeLists.txt  main.cpp
src/: Assert.cpp  CppUnitTest.cpp  TestManager.cpp  TestRegister.cpp
tests/: CMakeLists.txt  MathTest.cpp  PerformanceTest.cpp  SetupTest.cpp  StringTest.cpp
